--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -36,8 +36,7 @@ const PROJECTS = [
   },
   {
     title: "To Do List",
-    description:
-      "Explora el mundo Pokémon. Descubre una lista interminable de Pokémon, con nombres, IDs e imágenes. Navega sin problemas con el scroll infinito. Haz clic en cada Pokémon para obtener detalles sobre sus habilidades y tipo. Además, disfruta del modo oscuro para una experiencia visual más cómoda.",
+    description:"Este gestor de recordatorios es una herramienta diseñada para ayudarte a mantener un control efectivo de tus tareas y compromisos diarios. Con esta aplicación, puedes registrar y administrar una lista de tareas pendientes, lo que te permite mantener un seguimiento claro de lo que necesitas hacer",
     link: "https://gestor-tareas-mauricio-marins-projects.vercel.app/",
     image: "/public/Projects/recordatorios.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
