--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -29,7 +29,7 @@ const PROJECTS = [
     description:
       "Explora el mundo Pokémon. Descubre una lista interminable de Pokémon, con nombres, IDs e imágenes. Navega sin problemas con el scroll infinito. Haz clic en cada Pokémon para obtener detalles sobre sus habilidades y tipo. Además, disfruta del modo oscuro para una experiencia visual más cómoda.",
     link: "https://pokedex-mauricio-marins-projects.vercel.app/",
-    image: "/public/Projects/Pokedex.webp",
+    image: "/public/Pokedex.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
     verMas: "https://pokedex-mauricio-marins-projects.vercel.app/",
     github: "https://github.com/Mauricio-mr-Dev/Poke-Api",
@@ -38,7 +38,7 @@ const PROJECTS = [
     title: "To Do List",
     description:"Este gestor de recordatorios es una herramienta diseñada para ayudarte a mantener un control efectivo de tus tareas y compromisos diarios. Con esta aplicación, puedes registrar y administrar una lista de tareas pendientes, lo que te permite mantener un seguimiento claro de lo que necesitas hacer",
     link: "https://gestor-tareas-mauricio-marins-projects.vercel.app/",
-    image: "/public/Projects/recordatorios.webp",
+    image: "/public/recordatorios.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
     verMas: "https://gestor-tareas-mauricio-marins-projects.vercel.app/",
     github: "https://github.com/Mauricio-mr-Dev/Web-Reminders",
@@ -48,7 +48,7 @@ const PROJECTS = [
     description:
       "Esta página web ofrece una experiencia interactiva para buscar y descargar GIFs de manera rápida y sencilla. Utilizando la API de GIF, los usuarios pueden explorar una amplia variedad de GIFs, seleccionar sus favoritos y descargarlos.",
     link: "https://gestor-tareas-mauricio-marins-projects.vercel.app/",
-    image: "/public/Projects/giif-expert.webp",
+    image: "/public/giif-expert.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
     verMas: "",
     github: "https://github.com/Mauricio-mr-Dev/Web-Reminders",
