--- a/src/components/SobreMi.astro
+++ b/src/components/SobreMi.astro
@@ -9,23 +9,26 @@
 
     <span class="text-yellow-200">
       Mi pasión por esta área me impulsa a seguir aprendiendo constantemente,
-      buscando nuevos retos y superando obstáculos para mejorar mis habilidades.</span>
+      buscando nuevos retos y superando obstáculos para mejorar mis habilidades.</span
+    >
     He participado en proyectos freelance y escolares, donde he sido el encargado
     de crear interfaces atractivas y funcionales. <br />
     <br />
 
     <p>
       Mi enfoque en el aprendizaje continuo y mi excelente actitud me permiten
-      enfrentar cada desafío con determinación y optimismo, <span class="text-yellow-200" >
-        convirtiendo cada
-      obstáculo en una oportunidad para superarme a mí mismo.
+      enfrentar cada desafío con determinación y optimismo, <span
+        class="text-yellow-200"
+      >
+        convirtiendo cada obstáculo en una oportunidad para superarme a mí
+        mismo.
       </span>
     </p>
   </span>
 
   <img
     class="rounded-xl w-[430px] h-[430px] ml-4 max-h-full"
-    src="/public/Projects/img-sobre-mi.webp"
+    src="/public/img-sobre-mi.webp"
     alt="imagen de mauricio marin"
   />
 </section>
