update images and components

--- a/src/components/SobreMi.astro
+++ b/src/components/SobreMi.astro
@@ -28,7 +28,7 @@
 
   <img
     class="rounded-xl w-[430px] h-[430px] ml-4 max-h-full"
-    src="/public/img-sobre-mi.webp"
+    src="/projects/img-sobre-mi.webp"
     alt="imagen de mauricio marin"
   />
 </section>
