--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import SobreMi from "../components/SobreMi.astro";
     <SectionContainer class="py-44 pb-24">
       <img
         class="rounded-full size-[120px] object-fill mb-4"
-        src="/public/imgmauricio.webp"
+        src="/projects/imgmauricio.webp"
         alt="maurico marin foto"
       />
       <h1
