--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -31,7 +31,7 @@ const PROJECTS = [
     link: "https://pokedex-mauricio-marins-projects.vercel.app/",
     image: "/projects/Pokedex.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
-    verMas: "https://pokedex-mauricio-marins-projects.vercel.app/",
+    verMas: "https://pokedex-mauricomr.netlify.app/",
     github: "https://github.com/Mauricio-mr-Dev/Poke-Api",
   },
   {
@@ -40,7 +40,7 @@ const PROJECTS = [
     link: "https://gestor-tareas-mauricio-marins-projects.vercel.app/",
     image: "/projects/recordatorios.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
-    verMas: "https://gestor-tareas-mauricio-marins-projects.vercel.app/",
+    verMas: "https://reminders-notes.netlify.app/",
     github: "https://github.com/Mauricio-mr-Dev/Web-Reminders",
   },
   {
@@ -50,7 +50,7 @@ const PROJECTS = [
     link: "https://gestor-tareas-mauricio-marins-projects.vercel.app/",
     image: "/projects/giif-expert.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
-    verMas: "",
+    verMas: "https://gifs-randoms.netlify.app/",
     github: "https://github.com/Mauricio-mr-Dev/Web-Reminders",
   },
 ];
