--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,25 +2,31 @@
 import Html from "./icons/Html.astro";
 import Css from "./icons/Css.astro";
 import React from "./icons/React.astro";
+import JavaScript from './icons/JavaScript.astro'
 
 const TAGS = {
   HTML: {
-    name: "HTML",
+    name: "Html",
     class: "bg-black text-white",
     icon: Html,
   },
 
   CSS: {
-    name: "CSS",
+    name: "Css",
     class: "bg-black text-white",
     icon: Css,
   },
 
   REACT: {
-    name: "REACT",
+    name: "React",
     class: "bg-black text-white",
     icon: React,
   },
+  JS:{
+    name:'JavaScript',
+    class: "bg-black text-white",
+    icon:JavaScript,
+  }
 };
 
 const PROJECTS = [
@@ -28,7 +34,6 @@ const PROJECTS = [
     title: "Pokedex",
     description:
       "Explora el mundo Pokémon. Descubre una lista interminable de Pokémon, con nombres, IDs e imágenes. Navega sin problemas con el scroll infinito. Haz clic en cada Pokémon para obtener detalles sobre sus habilidades y tipo. Además, disfruta del modo oscuro para una experiencia visual más cómoda.",
-    link: "https://pokedex-mauricio-marins-projects.vercel.app/",
     image: "/projects/Pokedex.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
     verMas: "https://pokedex-mauricomr.netlify.app/",
@@ -36,18 +41,27 @@ const PROJECTS = [
   },
   {
     title: "To Do List",
-    description:"Este gestor de recordatorios es una herramienta diseñada para ayudarte a mantener un control efectivo de tus tareas y compromisos diarios. Con esta aplicación, puedes registrar y administrar una lista de tareas pendientes, lo que te permite mantener un seguimiento claro de lo que necesitas hacer",
-    link: "https://gestor-tareas-mauricio-marins-projects.vercel.app/",
+    description:
+      "Este gestor de recordatorios es una herramienta diseñada para ayudarte a mantener un control efectivo de tus tareas y compromisos diarios. Con esta aplicación, puedes registrar y administrar una lista de tareas pendientes, lo que te permite mantener un seguimiento claro de lo que necesitas hacer",
     image: "/projects/recordatorios.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
     verMas: "https://reminders-notes.netlify.app/",
     github: "https://github.com/Mauricio-mr-Dev/Web-Reminders",
   },
+
+  {
+    title: "IP geolocation",
+    description:
+      "Geolocalizador de IP: Explora el mundo digital. Descubre la ubicación geográfica de cualquier dirección IP con precisión y facilidad. Integra esta herramienta en tus aplicaciones web para identificar la ubicación del usuario con solo unos clics. ¡Conoce continentes, países, ciudades y más con solo ingresar una dirección IP",
+    image: "/projects/ip-geolocation.png",
+    tags: [TAGS.HTML, TAGS.CSS, TAGS.JS],
+    verMas: "https://ip-geolocation-mr.netlify.app/",
+    github: "https://github.com/Mauricio-mr-Dev/Geolocation-IP",
+  },
   {
     title: "Giff Expert App",
     description:
       "Esta página web ofrece una experiencia interactiva para buscar y descargar GIFs de manera rápida y sencilla. Utilizando la API de GIF, los usuarios pueden explorar una amplia variedad de GIFs, seleccionar sus favoritos y descargarlos.",
-    link: "https://gestor-tareas-mauricio-marins-projects.vercel.app/",
     image: "/projects/giif-expert.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
     verMas: "https://gifs-randoms.netlify.app/",
@@ -110,34 +124,32 @@ const PROJECTS = [
                 Preview
               </a>
             )}
-      </article>
-            
-              {proyecto.github && (
-                <a
-                  target="_blank"
-                  href={proyecto.github}
-                  class="inline-flex items-center justify-center gap-2 px-3 py-2 space-x-2 text-base text-white transition bg-gray-800 border border-gray-600 focus-visible:ring-yellow-500/80 text-md hover:bg-gray-800 hover:border-gray-900 group max-w-fit rounded-xl hover:text-white focus:outline-none focus-visible:outline-none focus-visible:ring focus-visible:ring-white focus-visible:ring-offset-2 active:bg-black"
-                >
-                  <svg
-                    class="size-6"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    stroke-width="2"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
-                  </svg>
-                  Code
-                </a>
-              )}
-            </article>
           </article>
+
+          {proyecto.github && (
+            <a
+              target="_blank"
+              href={proyecto.github}
+              class="inline-flex items-center justify-center gap-2 px-3 py-2 space-x-2 text-base text-white transition bg-gray-800 border border-gray-600 focus-visible:ring-yellow-500/80 text-md hover:bg-gray-800 hover:border-gray-900 group max-w-fit rounded-xl hover:text-white focus:outline-none focus-visible:outline-none focus-visible:ring focus-visible:ring-white focus-visible:ring-offset-2 active:bg-black"
+            >
+              <svg
+                class="size-6"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                stroke-width="2"
+                stroke="currentColor"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+              </svg>
+              Code
+            </a>
+          )}
         </section>
       </section>
     </article>
@@ -145,24 +157,21 @@ const PROJECTS = [
 }
 
 <style>
+  @media (max-width: 768px) {
+    #article {
+      flex-direction: column;
+      gap: 10px;
+      justify-content: center;
+      align-items: center;
+    }
 
-@media (max-width: 768px){
+    img {
+      width: 350px;
+      object-fit: contain;
+    }
 
-  #article{
-    flex-direction: column;
-    gap: 10px;
-    justify-content: center;
-    align-items: center;
+    p {
+      font-size: 15px;
+    }
   }
-
-  img{
-    width: 350px;
-    object-fit: contain;
-  }
-
-  p{
-    font-size: 15px;
-  }
-
-}
 </style>
