--- a/src/components/SobreMi.astro
+++ b/src/components/SobreMi.astro
@@ -27,7 +27,7 @@
   </span>
 
   <img
-    class="rounded-xl w-[430px] h-[430px] ml-4 max-h-full"
+    class="rounded-xl w-[430px] h-[430px] ml-4 max-h-full object-contain"
     src="/projects/img-sobre-mi.webp"
     alt="imagen de mauricio marin"
   />
@@ -38,12 +38,15 @@
     section {
       flex-direction: column;
       justify-content: center;
-      align-items: center;
+      
     }
     span {
       font-size: 18px;
     }
     img {
+      object-fit: contain;
+      margin-right: 27px;
+      
     }
   }
 </style>
