--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,10 +44,9 @@ import SobreMi from "../components/SobreMi.astro";
         funcionales. Disfruto convirtiendo ideas creativas en código eficiente y <span
           class="text-yellow-200"
           >siempre estoy buscando oportunidades para aprender y mejorar mis
-          habilidades."</span
-        >
+          habilidades</span>."
 
-        >
+        
       </h2>
       <nav class="flex gap-4 flex-wrap mt-8">
         <SocialPill
