new project and new img the project, portaldeltrueque

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -30,23 +30,15 @@ const TAGS = {
 };
 
 const PROJECTS = [
-  {
-    title: "Pokedex",
+
+{
+    title: "EL portal del trueque",
     description:
-      "Explora el mundo Pokémon. Descubre una lista interminable de Pokémon, con nombres, IDs e imágenes. Navega sin problemas con el scroll infinito. Haz clic en cada Pokémon para obtener detalles sobre sus habilidades y tipo. Además, disfruta del modo oscuro para una experiencia visual más cómoda.",
-    image: "/projects/Pokedex.webp",
+      "Es una emocionante plataforma web donde puedes comprar, vender y cambiar productos de diferentes categorías de forma fácil y segura. Con solo registrarte a través de Google, podrás empezar a subir tus artículos y explorar las ofertas de otros usuarios. Ya sea que busques una gran oferta o quieras deshacerte de algo que ya no necesitas.",
+    image: "/projects/portaldeltrueke.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
-    verMas: "https://pokedex-mauricomr.netlify.app/",
-    github: "https://github.com/Mauricio-mr-Dev/Poke-Api",
-  },
-  {
-    title: "To Do List",
-    description:
-      "Este gestor de recordatorios es una herramienta diseñada para ayudarte a mantener un control efectivo de tus tareas y compromisos diarios. Con esta aplicación, puedes registrar y administrar una lista de tareas pendientes, lo que te permite mantener un seguimiento claro de lo que necesitas hacer",
-    image: "/projects/recordatorios.webp",
-    tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
-    verMas: "https://reminders-notes.netlify.app/",
-    github: "https://github.com/Mauricio-mr-Dev/Web-Reminders",
+    verMas: "https://truequeando.netlify.app/",
+    github: "https://github.com/Mauricio-mr-Dev/Cambalaches",
   },
 
   {
@@ -67,6 +59,15 @@ const PROJECTS = [
     verMas: "https://gifs-randoms.netlify.app/",
     github: "https://github.com/Mauricio-mr-Dev/Web-Reminders",
   },
+  {
+    title: "Pokedex",
+    description:
+      "Explora el mundo Pokémon. Descubre una lista interminable de Pokémon, con nombres, IDs e imágenes. Navega sin problemas con el scroll infinito. Haz clic en cada Pokémon para obtener detalles sobre sus habilidades y tipo. Además, disfruta del modo oscuro para una experiencia visual más cómoda.",
+    image: "/projects/Pokedex.webp",
+    tags: [TAGS.HTML, TAGS.CSS, TAGS.REACT],
+    verMas: "https://pokedex-mauricomr.netlify.app/",
+    github: "https://github.com/Mauricio-mr-Dev/Poke-Api",
+  }
 ];
 ---
 
