new changes in scroll header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,72 +7,79 @@
   class="flex z-10 justify-center items-center py-3 w-full xl:w-[880px] mx-auto bg-slate-600 rounded-full fixed top-5 left-0 right-0"
 >
   <nav class="flex flex-row gap-x-4 sm:gap-x-10">
-    <a class="text-xl hover:text-yellow-500" href="#"
-      >Inicio<a>
-        <a class="text-xl hover:text-yellow-500" href="#experiencia"
-          >Experiencia<a>
-            <a class="text-xl hover:text-yellow-500" href="#proyectos"
-              >Proyectos<a>
-                <a class="text-xl hover:text-yellow-500" href="#sobre-mi"
-                  >Sobre mí<a>
-                    <a
-                      class="text-xl hover:text-yellow-500"
-                      href="mailto:maurimr465@gmail.com">Contacto</a
-                    >
-                  </a>
-                </a>
-
-                <style>
-                  @media (max-width: 768px) {
-                    header {
-                      width: 90%;
-                    }
-                    nav {
-                      padding: 0px;
-                      gap: 12px;
-                    }
-                    nav a {
-                      font-size: 8px;
-                      padding: 0px;
-                    }
-                  }
-                </style>
-
-                <script>
-                  
-                  const header = document.querySelector("header")!;
-
-                  let scrollTimer = 0;
-
-                  function cambiarColorEncabezado() {
-                    if (window.scrollY > 0) {
-                      header.style.backgroundColor = "#3182ce";
-                      header.style.display = "flex";
-                    } else {
-                      header.style.backgroundColor = "transparent";
-                      header.style.display = "flex";
-                    }
-                  }
-                  window.addEventListener("scroll", cambiarColorEncabezado);
-
-                  function usuarioQuieto() {
-                    header.style.display = "none";
-                  }
-
-                  window.addEventListener("scroll", () => {
-                    cambiarColorEncabezado();
-                    clearTimeout(scrollTimer);
-                    window.scrollY > 10
-                      ? (scrollTimer = setTimeout(usuarioQuieto, 3000))
-                      : "";
-                  });
-
-                </script></a
-              ></a
-            ></a
-          ></a
-        ></a
-      ></a
+    <a class="text-xl hover:text-yellow-500" href="#">Inicio </a>
+    <a class="text-xl hover:text-yellow-500" href="#experiencia">Experiencia</a>
+    <a class="text-xl hover:text-yellow-500" href="#proyectos">Proyectos</a>
+    <a class="text-xl hover:text-yellow-500" href="#sobre-mi">Sobre mí</a>
+    <a class="text-xl hover:text-yellow-500" href="mailto:maurimr465@gmail.com"
+      >Contacto</a
     >
+
+    <style>
+      @media (max-width: 768px) {
+        header {
+          width: 90%;
+        }
+        nav {
+          padding: 0px;
+          gap: 12px;
+        }
+        nav a {
+          font-size: 8px;
+          padding: 0px;
+        }
+      }
+    </style>
+
+    <script>
+      const header = document.querySelector("header")!;
+      let scrollTimer = 0;
+
+      function cambiarColorEncabezado() {
+        if (window.scrollY > 0) {
+          header.style.backgroundColor = "#3182ce";
+          header.style.display = "flex";
+        } else {
+          header.style.backgroundColor = "transparent";
+          header.style.display = "flex";
+        }
+      }
+
+      window.addEventListener("scroll", cambiarColorEncabezado);
+
+      function usuarioQuieto() {
+        header.style.display = "none";
+      }
+
+      window.addEventListener("scroll", () => {
+        cambiarColorEncabezado();
+        clearTimeout(scrollTimer);
+        window.scrollY > 10
+          ? (scrollTimer = setTimeout(usuarioQuieto, 2000))
+          : " ";
+      });
+
+      header.onmouseover = function () {
+        if ("onmouseover" in header) {
+          clearTimeout(scrollTimer);
+        }
+      };
+
+      function userActive() {
+        if ("onmouseover" in header) {
+          header.onmouseover = function () {
+            clearTimeout(scrollTimer);
+          };
+
+          header.onmouseout = function () {
+            window.scrollY > 10
+              ? (scrollTimer = setTimeout(usuarioQuieto, 1000))
+              : " ";
+          };
+        }
+      }
+
+      header.addEventListener("mouseover", userActive);
+    </script>
   </nav>
 </header>
