--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,13 +55,18 @@ import MiStack from "../components/MiStack.astro";
           <LinkedIn class="size-4 md:-size-6" />
           LinkedIn
         </SocialPill>
+
         <SocialPill href="https://github.com/Mauricio-mr-Dev">
           <GitHub class="size-4 md:-size-6" />
           GitHub
         </SocialPill>
-        <SocialPill href="mailto:maurimr465@gmail.com">
+        <SocialPill href="mailto:maurimr465@gmail.com" >
           <Mail class="size-4 md:-size-6" />
           Maurimr465@gmail.com
+        </SocialPill>
+        <SocialPill href="./CV/cv.pdf" download>
+          <img src="./CV/icon-pdf.webp" alt="" class="size-5 bg-white md:-size-6">
+          Descargar CV
         </SocialPill>
       </nav>
     </SectionContainer>
