--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,11 +2,25 @@
 import ItemExperience from "./ItemExperiencie.astro";
 const EXPERIENCIE = [
   {
-    date: "Actualmente...",
+    date: "Febrero 2024 - Mayo 2024",
+    title: "El portal del truque",
+    description:
+      "Diseñé y desarrollé la interfaz, funcionalidad y diseño de la plataforma de intercambio online utiliozando react.js. Además, implementé el backend para la autenticación de los usuarios, lagestión de subida y descarga de imágenes utilizando Firebase, asegurando un sistema robusto y seguro para los usuarios.",
+    link: "https://truequeando.netlify.app/",
+  },
+  {
+    date: "Abril 2024",
+    title: "Imys oficial Website",
+    description:
+      " Utilicé Astro para desarrollar la interfaz de usuario, Me encargué de asegurar la compatibilidad yla experiencia de usuario en dispositivos móviles y tablets, implementando un diseño responsive para una visualización óptima en diferentes tamaños de pantalla..",
+    link: "https://github.com/easysoftwaredesignmexico/imys-officialwebsite",
+  },
+  {
+    date: "Marzo 2024",
     title:
       "Proyecto de Creación de Sitio Web de Streaming Internacional  -  Mis Emisoras Inc",
     description:
-      "Desempeñé un papel fundamental en el diseño y desarrollo de interfaces frontend para un proyecto en curso de creación de una plataforma web de streaming internacional.",
+      " Utilicé Astro para desarrollar la interfaz de usuario, Me encargué de asegurar la compatibilidad yla experiencia de usuario en dispositivos móviles y tablets, implementando un diseño responsivepara una visualización óptima en diferentes tamaños de pantalla",
     link: "https://github.com/easysoftwaredesignmexico/miemisoras-website",
   },
 ];
