--- a/src/components/ItemExperiencie.astro
+++ b/src/components/ItemExperiencie.astro
@@ -9,13 +9,13 @@ const { title, description, link, date } = Astro.props;
 ---
 
 <div
-  class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+  class="absolute w-3 h-3 bg-[#EDC216] rounded-full mt-1.5 -start-1.5 border border-yellow dark:border-gray-900 dark:bg-gray-700"
 >
 </div>
-<time class="mb-1 text-sm font-normal leading-none text-sky-200/80">{date}</time
+<time class="mb-1 text-1xl font-normal leading-none text-sky-200/80">{date}</time
 >
 
-<h3 class="text-2xl font-semibold text-yellow-200 dark:text-white mt-5">
+<h3 class="text-2xl font-semibold text-[#EDC216] dark:text-white mt-5">
   {title}
 </h3>
 <p class="mb-4 text-base font-normal text-gray-200 text-pretty w-[70%] mt-5">
@@ -27,7 +27,7 @@ const { title, description, link, date } = Astro.props;
     <a 
     target="_blank"
       href={link}
-      class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
+      class="inline-flex items-center px-2 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
     >
       Saber mass...
       <svg
