change text to socailpill email

--- a/src/components/SobreMi.astro
+++ b/src/components/SobreMi.astro
@@ -1,28 +1,11 @@
 <section class="flex justify-end items-center gap-4">
   <span class="text-2xl text-pretty">
     <p>
-      Me llamo Mauricio y <span class="text-yellow-200"
-        >llevo dos años inmerso en el mundo de la programación</span
-      >, especialmente enfocado en el desarrollo frontend.
-    </p>
-    <br />
+      ¡Hola a todos! Me llamo Mauricio y desde que era un niño he estado intrigado por el mundo de la informática. <span class="text-[#EDC216]">Hace unos dos años, decidí sumergirme en el desarrollo de software,</span> especialmente enfocado en el diseño y la programación del frontend de aplicaciones y sitios web. <br><br>
 
-    <span class="text-yellow-200">
-      Mi pasión por esta área me impulsa a seguir aprendiendo constantemente,
-      buscando nuevos retos y superando obstáculos para mejorar mis habilidades.</span
-    >
-    He participado en proyectos freelance y escolares, donde he sido el encargado
-    de crear interfaces atractivas y funcionales. <br />
-    <br />
-
-    <p>
-      Mi enfoque en el aprendizaje continuo y mi excelente actitud me permiten
-      enfrentar cada desafío con determinación y optimismo, <span
-        class="text-yellow-200"
-      >
-        convirtiendo cada obstáculo en una oportunidad para superarme a mí
-        mismo.
-      </span>
+      Durante este tiempo, me he embarcado en un emocionante viaje de aprendizaje autodidacta. Todos los días me despierto con la motivación de mejorar mis habilidades y conocimientos, explorando nuevas tecnologías y técnicas para seguir evolucionando en mi carrera. <br><br>
+      
+      Una de mis características más destacadas es mi actitud positiva y mi entusiasmo por colaborar con otros. <span class="text-[#EDC216]">Creo firmemente en el poder del trabajo en equipo para alcanzar metas más grandes y mejores resultados. </span> Siempre estoy abierto a nuevas ideas y perspectivas, y disfruto del proceso de aprender y crecer junto a mis colegas y compañeros de equipo.
     </p>
   </span>
 
