--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ import MiStack from "../components/MiStack.astro";
         </SocialPill>
         <SocialPill href="mailto:maurimr465@gmail.com" >
           <Mail class="size-4 md:-size-6" />
-          Maurimr465@gmail.com
+          Contactame
         </SocialPill>
         <SocialPill href="./CV/cv.pdf" download>
           <img src="./CV/icon-pdf.webp" alt="" class="size-5 bg-white md:-size-6">
